crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__fuzzy_search_replace-3.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
---
<file_content path="[TEMP_DIR]/test.txt">
function computeTotal(items, tax = 0) {
  let total = 0.0;
  for (const item of items) {
    total += item.price * item.quantity;
  }
  return total;
}
</file_content>
