crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__invalid_rust_replace-2.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: content
---
fn main() { let x =
