crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__multiple_blocks-2.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: final_content
---
    New First    
  Middle Line  
    New Last
