crates/forge_services/src/tools/patch/snapshots/forge_services__tools__patch__apply__test__whitespace_preservation.snap
---
source: crates/forge_services/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
---
<file_content path="[TEMP_DIR]/test.txt">
    Hi World    
  Test Line  
   Goodbye World
</file_content>
